--- a/notebooks/data-setup-part-step-1.ipynb
+++ b/notebooks/data-setup-part-step-1.ipynb
@@ -2,49 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "aec82a66",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install -q -r ../requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
-   "id": "9b9048ec-e1e8-4e48-99ce-978f1b310ceb",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install -q requests tqdm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "c528f3f7-9435-4c99-9911-3b4debbdf9e4",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install -q python-dotenv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
    "id": "117c043e-5e93-46b3-801c-7bedaa44a798",
    "metadata": {
     "tags": []
@@ -59,7 +35,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
+   "id": "5ecff1f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import keyring, os\n",
+    "\n",
+    "os.environ[\"KAGGLE_USERNAME\"] = keyring.get_password(\"KAGGLE_USERNAME\", \"kaggle_username\")\n",
+    "os.environ[\"KAGGLE_KEY\"] = keyring.get_password(\"KAGGLE_KEY\", \"kaggle_key\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "f21e9c6c-cd08-4906-9167-9678ce5ec4c6",
    "metadata": {
     "tags": []
@@ -76,7 +65,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "6827MB [00:37, 182.75MB/s]                          \n"
+      "6827MB [14:26,  7.88MB/s]                            \n"
      ]
     },
     {
@@ -92,7 +81,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "17MB [00:00, 17.06MB/s]                        \n"
+      "17MB [00:03,  4.86MB/s]                        \n"
      ]
     },
     {
@@ -108,7 +97,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "33MB [00:00, 62.85MB/s]                        \n"
+      "33MB [00:08,  4.08MB/s]                        \n"
      ]
     },
     {
@@ -132,8 +121,8 @@
     "DATA_DIR = Path(\"data\")\n",
     "DATA_DIR.mkdir(exist_ok=True)\n",
     "\n",
-    "KAGGLE_USERNAME = os.getenv(\"username\")\n",
-    "KAGGLE_KEY = os.getenv(\"key\")\n",
+    "KAGGLE_USERNAME = os.environ[\"KAGGLE_USERNAME\"]\n",
+    "KAGGLE_KEY = os.environ[\"KAGGLE_KEY\"]\n",
     "\n",
     "def download_file(file_name):\n",
     "    url = f\"https://www.kaggle.com/api/v1/competitions/data/download/amex-default-prediction/{file_name}\"\n",
@@ -169,7 +158,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -183,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
