--- a/notebooks/preprocessor-function.ipynb
+++ b/notebooks/preprocessor-function.ipynb
@@ -2,7 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
+   "id": "fb2207f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%reset -f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "f435e813-d178-4efa-bdfc-dab7a068e1d8",
    "metadata": {
     "tags": []
@@ -12,60 +22,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "pip install -q pandas"
+    "%pip install -q -r ../requirements.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "f7f22aa0-1ab8-45ed-94b4-65ec6200adc1",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install -q humanize"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "5c8e0800-fba9-4b00-8f2d-3a7d9b144648",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install -q numpy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "id": "6bf34f13-0ac8-452a-b9e6-f7693bd0126f",
    "metadata": {
     "tags": []
@@ -74,25 +41,28 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import json"
+    "import json\n",
+    "from pathlib import Path\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "15f9fcf0-159e-42d5-a1fc-0449a43d9c41",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "train_data_path = '/notebooks/data/train_data.csv';\n",
-    "train_label_path = '/notebooks/data/train_labels.csv';"
+    "DATA_DIR = Path(\"./data\")\n",
+    "train_data_path = DATA_DIR / \"train_data.csv\"\n",
+    "train_labels_path = DATA_DIR / 'train_labels.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "id": "cd9f1d6d-26e4-49f6-9dd9-dc5d1ad828dd",
    "metadata": {
     "tags": []
@@ -113,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "id": "c8fa8a80-0966-4536-8d40-6fc9beedd726",
    "metadata": {
     "tags": []
@@ -156,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "id": "62c2f00e-0b36-4cf8-91ae-bf022fc862d4",
    "metadata": {
     "tags": []
@@ -170,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "id": "44b7896e-f20a-4e90-8e91-1b9877da876f",
    "metadata": {
     "tags": []
@@ -186,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "id": "78216924-87fc-40d3-946a-283e10bae6d1",
    "metadata": {
     "tags": []
@@ -199,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "id": "ca7fbc8f-0f49-461f-9bfc-b946612a92cc",
    "metadata": {
     "tags": []
@@ -211,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "id": "50bd165b-4a44-4668-84e8-059bd7dc48b0",
    "metadata": {
     "tags": []
@@ -264,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "id": "7eaed3c9-409f-4bc1-b6c2-7a8970e15c0c",
    "metadata": {
     "tags": []
@@ -338,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "id": "7e20573b-eeeb-454e-8dd6-4dca48981b48",
    "metadata": {
     "tags": []
@@ -346,19 +316,24 @@
    "outputs": [],
    "source": [
     "def preprocess_and_save_parquet(input_csv: str, output_prefix: str, chunksize: int = 100_000):\n",
+    "    refined_dir = os.path.join(os.path.dirname(output_prefix), \"refined_data\")\n",
+    "    os.makedirs(refined_dir, exist_ok=True)\n",
     "    chunks = pd.read_csv(input_csv, chunksize=chunksize)\n",
     "    parquet_parts = []\n",
+    "\n",
     "    for i, chunk in enumerate(chunks):\n",
     "        processed = preprocess_chunk(chunk, model_type=\"tree\")  # always save raw categories\n",
-    "        part_path = f\"{output_prefix}_part{i}.parquet\"\n",
+    "        filename = f\"{os.path.basename(output_prefix)}_part{i}.parquet\"\n",
+    "        part_path = os.path.join(refined_dir, filename)\n",
     "        processed.to_parquet(part_path, index=False)\n",
     "        parquet_parts.append(part_path)\n",
+    "\n",
     "    return parquet_parts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "id": "a2563906-b319-47e0-8743-244c9d385a2e",
    "metadata": {
     "tags": []
@@ -378,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "id": "099954f4-249b-4c34-8178-eca9f899474d",
    "metadata": {
     "tags": []
@@ -392,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 21,
    "id": "2a8a757d-f920-44af-a075-afc0e84f69b8",
    "metadata": {
     "tags": []
@@ -411,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
    "id": "0d629fe8-da5e-4577-aaec-ad438e920155",
    "metadata": {
     "tags": []
@@ -425,40 +400,38 @@
       "-------------------------------------------------------\n",
       "tree_df              DataFrame            4.8 GB         \n",
       "linear_df            DataFrame            4.7 GB         \n",
-      "chunk                DataFrame            179.2 MB       \n",
-      "float32_columns      list                 1.5 kB         \n",
-      "In                   list                 568 Bytes      \n",
+      "float32_columns      list                 1.7 kB         \n",
+      "Path                 type                 952 Bytes      \n",
       "parquet_files        list                 568 Bytes      \n",
       "cardinality_dict     dict                 272 Bytes      \n",
-      "Out                  dict                 224 Bytes      \n",
-      "high_missing_corr_cols list                 216 Bytes      \n",
+      "In                   list                 248 Bytes      \n",
       "high_corr_cols       list                 216 Bytes      \n",
-      "open                 function             152 Bytes      \n",
-      "print_variable_sizes function             152 Bytes      \n",
-      "preprocess_chunk     function             152 Bytes      \n",
-      "handle_high_corr_missingness function             152 Bytes      \n",
-      "preprocess_and_save_parquet function             152 Bytes      \n",
-      "load_and_prepare_for_linear function             152 Bytes      \n",
-      "load_and_prepare_for_tree function             152 Bytes      \n",
+      "open                 function             168 Bytes      \n",
+      "print_variable_sizes function             168 Bytes      \n",
+      "handle_high_corr_missingness function             168 Bytes      \n",
+      "preprocess_chunk     function             168 Bytes      \n",
+      "preprocess_and_save_parquet function             168 Bytes      \n",
+      "load_and_prepare_for_linear function             168 Bytes      \n",
+      "load_and_prepare_for_tree function             168 Bytes      \n",
+      "categorical_cols     list                 152 Bytes      \n",
       "float16_columns      list                 136 Bytes      \n",
-      "cardinality_json     str                  136 Bytes      \n",
-      "categorical_cols     list                 136 Bytes      \n",
+      "cardinality_json     str                  128 Bytes      \n",
+      "DATA_DIR             PosixPath            104 Bytes      \n",
+      "train_data_path      PosixPath            104 Bytes      \n",
+      "train_labels_path    PosixPath            104 Bytes      \n",
       "low_missing_corr_cols list                 104 Bytes      \n",
-      "train_label_path     str                  81 Bytes       \n",
-      "train_data_path      str                  79 Bytes       \n",
       "np                   module               72 Bytes       \n",
-      "sys                  module               72 Bytes       \n",
-      "humanize             module               72 Bytes       \n",
       "pd                   module               72 Bytes       \n",
       "json                 module               72 Bytes       \n",
+      "sys                  module               72 Bytes       \n",
+      "humanize             module               72 Bytes       \n",
+      "Out                  dict                 64 Bytes       \n",
       "get_ipython          method               64 Bytes       \n",
-      "int_columns          list                 64 Bytes       \n",
       "bool_cols            list                 64 Bytes       \n",
-      "exit                 ZMQExitAutocall      56 Bytes       \n",
-      "quit                 ZMQExitAutocall      56 Bytes       \n",
-      "chunks               TextFileReader       56 Bytes       \n",
-      "chunk_size           int                  28 Bytes       \n",
-      "i                    int                  28 Bytes       \n"
+      "exit                 ZMQExitAutocall      48 Bytes       \n",
+      "quit                 ZMQExitAutocall      48 Bytes       \n",
+      "chunks               TextFileReader       48 Bytes       \n",
+      "chunk_size           int                  28 Bytes       \n"
      ]
     }
    ],
@@ -468,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 22,
    "id": "bc1e59a7-3584-450e-818e-d65c808301a5",
    "metadata": {
     "tags": []
@@ -487,19 +460,11 @@
     "print(f\"tree_df rows: {len(tree_df):,}\")\n",
     "print(f\"linear_df rows: {len(linear_df):,}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4cb123a3-70fb-4e59-922f-235fb5ccc377",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -513,7 +478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
