stage1 data added direct usage

--- a/notebooks/preprocessor-function.ipynb
+++ b/notebooks/preprocessor-function.ipynb
@@ -460,6 +460,20 @@
     "print(f\"tree_df rows: {len(tree_df):,}\")\n",
     "print(f\"linear_df rows: {len(linear_df):,}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "85de0644",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA_DIR = Path(\"./\")\n",
+    "os.makedirs(DATA_DIR/\"stage1\", exist_ok=True)\n",
+    "STAGE1_DIR = DATA_DIR/\"stage1\"\n",
+    "tree_df.to_parquet(STAGE1_DIR/\"tree_df.parquet\",compression=\"snappy\", index=False)\n",
+    "linear_df.to_parquet(STAGE1_DIR/\"linear_df.parquet\", compression=\"snappy\", index=False)"
+   ]
   }
  ],
  "metadata": {
