stage 1 preprocessor library function preprocessing training snippets added

--- a/notebooks/preprocessor-function.ipynb
+++ b/notebooks/preprocessor-function.ipynb
@@ -55,7 +55,7 @@
    },
    "outputs": [],
    "source": [
-    "DATA_DIR = Path(\"./data\")\n",
+    "DATA_DIR = Path(\"../data\")\n",
     "train_data_path = DATA_DIR / \"train_data.csv\"\n",
     "train_labels_path = DATA_DIR / 'train_labels.csv'"
    ]
@@ -328,7 +328,32 @@
     "        processed.to_parquet(part_path, index=False)\n",
     "        parquet_parts.append(part_path)\n",
     "\n",
-    "    return parquet_parts"
+    "    return parquet_parts",
+    "\n",
+    "\n",
+    "def build_category_map(parquet_paths: list, output_path: str = \"category_map.json\"):\n",
+    "    \"\"\"\n",
+    "    Scans all parquet files to find the union of all categories for each categorical column.\n",
+    "    Saves the result to a JSON file.\n",
+    "    \"\"\"\n",
+    "    full_categories = {col: set() for col in categorical_cols}\n",
+    "    \n",
+    "    for path in parquet_paths:\n",
+    "        df = pd.read_parquet(path, columns=[c for c in categorical_cols]) # Read only cat cols for speed\n",
+    "        for col in categorical_cols:\n",
+    "            if col in df.columns:\n",
+    "                # Drop NAs before getting unique values to avoid 'nan' as a category if not intended\n",
+    "                uniques = df[col].dropna().unique()\n",
+    "                full_categories[col].update(uniques)\n",
+    "    \n",
+    "    # Convert sets to sorted lists for JSON serialization and deterministic order\n",
+    "    json_ready_map = {col: sorted(list(vals)) for col, vals in full_categories.items()}\n",
+    "    \n",
+    "    with open(output_path, 'w') as f:\n",
+    "        json.dump(json_ready_map, f)\n",
+    "    \n",
+    "    print(f\"Category map saved to {output_path}\")\n",
+    "    return json_ready_map\n"
    ]
   },
   {
@@ -340,13 +365,27 @@
    },
    "outputs": [],
    "source": [
-    "def load_and_prepare_for_linear(parquet_paths: list):\n",
+    "def load_and_prepare_for_linear(parquet_paths: list, category_map_path: str = \"category_map.json\"):\n",
+    "    # Load category map\n",
+    "    with open(category_map_path, 'r') as f:\n",
+    "        category_map = json.load(f)\n",
+    "\n",
     "    dfs = []\n",
     "    for path in parquet_paths:\n",
     "        df = pd.read_parquet(path)\n",
+    "        \n",
+    "        # Enforce categories for all categorical columns\n",
+    "        for col, categories in category_map.items():\n",
+    "            if col in df.columns:\n",
+    "                # Create CategoricalDtype with known categories\n",
+    "                cat_type = pd.CategoricalDtype(categories=categories, ordered=False)\n",
+    "                df[col] = df[col].astype(cat_type)\n",
+    "        \n",
+    "        # Now get_dummies will produce consistent columns\n",
     "        cat_cols = [col for col in categorical_cols if col in df.columns]\n",
     "        if cat_cols:\n",
     "            df = pd.get_dummies(df, columns=cat_cols, drop_first=True)\n",
+    "            \n",
     "        dfs.append(df)\n",
     "    return pd.concat(dfs, ignore_index=True)"
    ]
@@ -377,8 +416,11 @@
     "# Step 1: preprocess large CSV and save Parquet parts\n",
     "parquet_files = preprocess_and_save_parquet(train_data_path, \"processed_data\")\n",
     "\n",
-    "# Step 2a: load for linear model (one-hot encoding done here)\n",
-    "linear_df = load_and_prepare_for_linear(parquet_files)\n",
+    "# Step 1.5: Build and save category map from the training data\n",
+    "build_category_map(parquet_files, \"category_map.json\")\n",
+    "\n",
+    "# Step 2a: load for linear model (one-hot encoding done here using the map)\n",
+    "linear_df = load_and_prepare_for_linear(parquet_files, \"category_map.json\")\n",
     "\n",
     "# Step 2b: load for tree model (categorical dtypes preserved)\n",
     "tree_df = load_and_prepare_for_tree(parquet_files)"
