Final project cleanup: Remove handover docs, remove Docker, reorganize structure, add setup guides

--- a/notebooks/preprocessor-function.ipynb
+++ b/notebooks/preprocessor-function.ipynb
@@ -7,12 +7,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%reset -f"
+    "% reset -f"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f435e813-d178-4efa-bdfc-dab7a068e1d8",
    "metadata": {
     "tags": []
@@ -27,7 +27,7 @@
     }
    ],
    "source": [
-    "%pip install -q -r ../requirements.txt"
+    "% pip install -q -r ../requirements.txt"
    ]
   },
   {
@@ -328,7 +328,7 @@
     "        processed.to_parquet(part_path, index=False)\n",
     "        parquet_parts.append(part_path)\n",
     "\n",
-    "    return parquet_parts",
+    "    return parquet_parts\n",
     "\n",
     "\n",
     "def build_category_map(parquet_paths: list, output_path: str = \"category_map.json\"):\n",
